--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,7 @@ body {
   letter-spacing: -0.214px;
 }
 .InputStyles {
+  outline: none;
   color: #000;
   font-family: Manrope;
   font-size: 14px;
@@ -51,10 +52,13 @@ body {
   font-weight: 700;
   line-height: normal;
   letter-spacing: -0.25px;
-  opacity: 0.4;
   border-radius: 8px;
   border: 1px solid #cfcfcf;
   padding-top: 16px;
   padding-bottom: 16px;
   padding-left: 24px;
+}
+.InputStyles::placeholder {
+  opacity: 0.4;
+  font-size: 14px;
 }
